fix text clipping

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -136,7 +136,7 @@ p {
     transition-duration: 0.2s;
     -webkit-transition-duration: 0.2s;
     -moz-transition-duration: 0.2s;
-    padding: 1em 0;
+    padding: .9em 0;
     margin: 0;
     @include mobile {
       padding: 0.75em 0;
@@ -160,6 +160,7 @@ p {
       display: inline-block;
       white-space: nowrap;
       text-overflow: ellipsis;
+      line-height: 1.4;
     }
   }
 
